--- a/07-autocorrelation.qmd
+++ b/07-autocorrelation.qmd
@@ -928,22 +928,23 @@ If we want to only map the statistically significant clusters, we need to use th
 :::
 
 ## Assignment {#assignment-w07}
-Through conducting our spatial autocorrelation tests, we can visually confirm the presence of clusters in our `asian_bangladeshi_prop` variable and provide a significance value associated with these tests. 
+Through conducting our spatial autocorrelation tests, we can confirm the presence of clusters in our `asian_bangladeshi_prop` variable and assign a significance value to these clusters. 
 
-Now you have the code, you will be able to repeat this analysis on any variable in the future. For this week's assignment, we therefore want you to find out whether also our `white_british` variable contains spatial clustering.
+Now you have the code, you will be able to repeat this analysis on any variable in the future. For this week's assignment, we therefore want you to find out whether also our `white_british` variable, or any of the other variables you find interesting, contains spatial clustering.
 
 In order to do this, you have to:
 
 1. Create a choropleth map showing the distribution of the variable values.
-2. Calculate a global spatial autocorrelation statistic and explain what it shows.
-3. Create a local Moran's I map showing the cluster types.
-4. Create a local Getis-Ord hotspot map.
-5. Compare these results to the output of our `asian_bangladeshi_prop` values. Do both variables have clusters? Do we see similar clusters in similar locations?
-6. Run the analysis using a different neighbour definition. What happens? Do the results change?
+2. Normalise the variable by dividing it by the total populaton.
+3. Calculate a global spatial autocorrelation statistic and explain what it shows.
+4. Create a local Moran's I map showing the cluster types.
+5. Create a local Getis-Ord hotspot map.
+6. Compare these results to the output of our `asian_bangladeshi_prop` values. Do both variables have clusters? Do we see similar clusters in similar locations?
+7. Run the analysis using a different neighbour definition. What happens? Do the results change?
 
 ## Want more? [Optional] {#wm-w07}
 ### More spatial autocorrelation {.unnumbered}
 If you are interested in moving beyond spatial autocorrelation, for instance how to account for spatial autocorrelation in statistical models (e.g. with Geographically Weighted Regression or Spatial Regression), have a look at the workbook [Mapping and Modelling Geographic Data in R](https://profrichharris.github.io/MandM/themap.html) by Bristol-based Professor [Richard Harris](https://www.bristol.ac.uk/people/person/Richard-Harris-871b21a9-0f5f-4bc8-9a99-8ace550d9903/). Start with [The Spatial Variable](https://profrichharris.github.io/MandM/themap.html) section, move to the [Measuring spatial autocorrelation](https://profrichharris.github.io/MandM/autocorrelation.html) section before looking at the [Geographically Weighted Statistics](https://profrichharris.github.io/MandM/gwstats.html) and [Spatial Regression](https://profrichharris.github.io/MandM/spregress.html) sections.
 
 ## Before you leave {#byl-w07}
-And that is how you can measure spatial dependence in your dataset through different spatial autocorrelation measures. Next week we will focus on the last topic within our set of core spatial analysis methods and techniques, but [this week we have covered enough](https://www.youtube.com/watch?v=fCZVL_8D048)!
+And that is how you can measure spatial dependence in your dataset through different spatial autocorrelation measures. Next week we will focus on the last topic within our set of core spatial analysis methods and techniques, but [this week we have covered enough](https://www.youtube.com/watch?v=fCZVL_8D048)! Probably time to get back to that pesky reading list.
